fix(All pages): fix horizontal scroll of tables and pages min widths

--- a/src/pages/dispensersPage/DispensersPage.css
+++ b/src/pages/dispensersPage/DispensersPage.css
@@ -1,7 +1,3 @@
-.dispensers-page {
-    min-width: 1150px;
-}
-
 .dispensers-page-pagination {
     display: flex;
     justify-content: center;
